[package]
name = "mgt"
version = "0.1.0"
authors = ["Michael Greenberg <michael.greenberg@pomona.edu>"]
description = "An implementation of Campora et al.'s 'Migrating Gradual Typing': a type inference engine for finding maximal static types in dynamically typed programs."
edition = "2018"
build = "build.rs" # LALRPOP preprocessing

[build-dependencies]
lalrpop = { version = "0.19.0", features = ["lexer"] }

[dependencies]
im-rc = "15.0.0"
lalrpop-util = "0.19.0"
regex = "1"
clap = "~2.33"