[package]
name = "mgt"
version = "0.1.0"
authors = ["Michael Greenberg <michael.greenberg@pomona.edu>"]
description = "An implementation of Campora et al.'s 'Migrating Gradual Typing': a type inference engine for finding maximal static types in dynamically typed programs."
edition = "2018"
build = "build.rs" # LALRPOP preprocessing
repository = "https://github.com/mgree/mgt"
license-file = "LICENSE"

[build-dependencies]
lalrpop = { version = "0.19.0", features = ["lexer"] }

[dev-dependencies]
assert_cli = "0.6.3"
serial_test = "0.4.0"

[dependencies]
im-rc = "15.0.0"
lalrpop-util = "0.19.0"
regex = "1"
pretty = "0.10.0"
clap = "2.33"
log = "0.4.11"
env_logger = "0.7.1"
tempfile = "3.1.0"
